--- a/src/main/resources/betterSkullResources/localization/eng/Event-Strings.json
+++ b/src/main/resources/betterSkullResources/localization/eng/Event-Strings.json
@@ -9,7 +9,8 @@
       "\"DRINK UP!\" NL You obtain a potion.",
       "\"PERHAPS THIS WILL HELP?\" NL You obtain a card.",
       "\"YOU MORTALS NEVER CHANGE. IT IS DONE.\" NL #yGold rains down on you!",
-      "\"BEHIND YOU, MORTAL.\" NL You peek behind the skull. Surely enough, there is a door."
+      "\"BEHIND YOU, MORTAL.\" NL You peek behind the skull. Surely enough, there is a door.",
+      "You notice a container labeled \"Holy Water\" nearby, and quickly fling its contents at the #g@flaming@ #g@skull,@ instantly dousing it. NL NL You feel a refreshing presence circle about you, lifting your spirits. NL NL Content with your good deed, you carry on your way."
     ],
     "OPTIONS": [
       "[Continue]",
@@ -20,7 +21,9 @@
       "[Riches?] #gGain #g",
       " #gGold. #rLose #r",
       "[How do I leave?] #rLose #r",
-      "[Leave]"
+      "[Leave]",
+      "[Dispel] #gHeal #g",
+      " #gHP."
     ]
   }
 }
