--- a/src/main/resources/betterSkullResources/localization/eng/Event-Strings.json
+++ b/src/main/resources/betterSkullResources/localization/eng/Event-Strings.json
@@ -17,7 +17,7 @@
       " #rHP.",
       "",
       "[Improvement?] #gUpgrade #ga #grandom #gcard. #rLose #r",
-      "[Power?] #gGet #ga #gCommon #gRelic. #rLose #r",
+      "[Power?] #gGet #ga #grandom #gCommon #gRelic. #rLose #r",
       "[Riches?] #gGain #g",
       " #gGold. #rLose #r",
       "[How do I leave?] #rLose #r",
