--- a/src/main/resources/betterSkullResources/localization/eng/Event-Strings.json
+++ b/src/main/resources/betterSkullResources/localization/eng/Event-Strings.json
@@ -13,7 +13,7 @@
       "You notice a container labeled #b\"Holy #bWater\" nearby, and quickly fling its contents at the #g@flaming@ #g@skull,@ instantly dousing it. NL NL You feel a refreshing presence circle about you, lifting your spirits. NL NL Content with your good deed, you carry on your way."
     ],
     "OPTIONS": [
-      "[Continue]",
+      "[Talk]",
       " #rHP.",
       "",
       "[Improvement?] #gUpgrade #ga #grandom #gcard. #rLose #r",
